tests/integrations/basic-fail/tests/actual_tests_bless_yolo/revisions_bad.bar.stderr
error[E0601]: `main` function not found in crate `revisions_bad`
  --> tests/actual_tests_bless_yolo/revisions_bad.rs:10:2
   |
10 | }
   |  ^ consider adding a `main` function to `tests/actual_tests_bless_yolo/revisions_bad.rs`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0601`.
